--- a/entrega/src/app/components/login/login.component.html
+++ b/entrega/src/app/components/login/login.component.html
@@ -21,12 +21,12 @@
                 </mat-form-field>
             </div>
         </div>
-        <div class="clearfix"></div>
+        <div style="color: red;">{{mensaje}}</div>
         <div class="checkbox">
             <label>
                 <input type="checkbox" value="">
                 <i class="input-helper"></i>
-                Keep me signed in
+                Recordarme
             </label>
         </div>
 
