--- a/entrega/src/app/components/login/login.component.html
+++ b/entrega/src/app/components/login/login.component.html
@@ -1,5 +1,11 @@
 <div class="lc-block toggled" id="l-login">
+    <div class="title text-center">
+        <h4 style="margin-bottom: 30px">Sistema de Gestión de Entrega de Tierra</h4>
+        <img src="assets/images/logo_login.jpg" style="border-radius: 100%" width="200" height="200">
+    </div>
     <form class="login-form" [formGroup]="form" (submit)="iniciarSesion()" style="padding-top: 10%" [attr.disabled]="isLoading">
+        <h4 style="margin-bottom: 30px">Iniciar Sesión</h4>
+        <div style="color: red;height: 30px">{{mensaje}}</div>
         <div class="input-group m-b-20">
             <span class="input-group-addon" style="vertical-align: middle">
                 <i class="material-icons prefix pt-5">person_outline</i>
@@ -21,53 +27,8 @@
                 </mat-form-field>
             </div>
         </div>
-        <div style="color: red;">{{mensaje}}</div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="">
-                <i class="input-helper"></i>
-                Recordarme
-            </label>
-        </div>
-
         <button class="btn btn-login btn-danger btn-float waves-effect waves-circle waves-float" style="padding-top: 10px">
             <i class="material-icons">arrow_forward</i>
         </button>
-
-        <ul class="login-navigation">
-            <li data-block="#l-register" class="bgm-red">Register</li>
-            <li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>
-        </ul>
     </form>
-</div>
-<!-- Register -->
-<div class="lc-block" id="l-register">
-
-    <ul class="input-group m-b-20">
-        <li (click)="registrarUsuario()" class="bgm-green">Registrar</li>
-    </ul>
-
-    <ul class="login-navigation">
-        <li data-block="#l-login" class="bgm-green">Login</li>
-        <li data-block="#l-forget-password" class="bgm-orange">Forgot Password?</li>
-    </ul>
-</div>
-
-<!-- Forgot Password -->
-<div class="lc-block" id="l-forget-password">
-    <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
-
-    <div class="input-group m-b-20">
-        <span class="input-group-addon"><i class="zmdi zmdi-email"></i></span>
-        <div class="fg-line">
-            <input type="text" class="form-control" placeholder="Email Address">
-        </div>
-    </div>
-
-    <a href="http://byrushan.com/projects/ma/1-5-1/jquery/login.html" class="btn btn-login btn-danger btn-float waves-effect waves-circle waves-float"><i class="zmdi zmdi-arrow-forward"></i></a>
-
-    <ul class="login-navigation">
-        <li data-block="#l-login" class="bgm-green">Login</li>
-        <li data-block="#l-register" class="bgm-red">Register</li>
-    </ul>
 </div>
