--- a/entrega/src/styles.css
+++ b/entrega/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "assets/css/animate.min.css";
 @import "assets/css/sweet-alert.css";
 @import "assets/css/app.min.1.css";
