--- a/entrega/src/app/admin/tipo-superficie/tipo-de-superficie-window/tipo-superficie-window.component.html
+++ b/entrega/src/app/admin/tipo-superficie/tipo-de-superficie-window/tipo-superficie-window.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="form" (submit)="insertarTipoDeSuperficie()">
+<form class="form" [formGroup]="form" (submit)="insertarTipoSuperficie()">
     <h1 mat-dialog-title style="margin: 0 0">{{insertar?'Nuevo Tipo De Superficie':'Modificar Tipo De Superficie'}}
         <button type="button" mat-icon-button class="close-button" (click)="onNoClick()">
             <mat-icon style="font-size: 25px">close</mat-icon>
