--- a/entrega/src/app/admin/solicitud/solicitud-window/solicitud-window.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud-window/solicitud-window.component.html
@@ -141,11 +141,17 @@
                                     <mat-hint align="end">{{inputTF.value?.length || 0}}/8</mat-hint>
                                 </mat-form-field>
                             </div>
-                            <div class="col-xs-4">
+                            <div class="col-xs-3">
                                 <mat-form-field class="full-width">
                                     <input #inputTM matInput type="number" maxlength="8" placeholder="Teléfono Movil" formControlName="movil">
                                     <mat-hint align="end">{{inputTM.value?.length || 0}}/8</mat-hint>
                                 </mat-form-field>
+                            </div>
+                            <div class="col-xs-4">
+                                <mat-radio-group formControlName="sexo">
+                                    <mat-radio-button [value]="true" class="checkbox-inline"> Masculino</mat-radio-button>
+                                    <mat-radio-button [value]="false" class="checkbox-inline"> Femenino</mat-radio-button>
+                                </mat-radio-group>
                             </div>
                             <div class="col-xs-4">
                                 <mat-form-field class="full-width">
@@ -177,21 +183,21 @@
                                 </mat-form-field>
                             </div>
                         </div>
-                        <!--<div class="row">-->
-                        <!--<div class="col-xs-12">-->
-                        <!--<mat-form-field class="full-width">-->
-                        <!--<mat-select matInput placeholder="Seleccione la entidad a vincular" formControlName="asociado" [compareWith]="compararPersonas">-->
-                        <!--<mat-option *ngFor="let persona of personas" [value]="persona">-->
-                        <!--{{persona|persona}}-->
-                        <!--</mat-option>-->
-                        <!--</mat-select>-->
-                        <!--<mat-error *ngIf="formPersona.controls['dirParticular'].errors?.required">Debe seleccionar un organismo a para vincular.</mat-error>-->
-                        <!--</mat-form-field>-->
-                        <!--<button *ngIf="formPersona.controls['tipoPersona'].value =='Natural'" mat-mini-fab color="primary" (click)="abrirVentana()" matTooltip="Nueva Persona Juridica">-->
-                        <!--<mat-icon style="font-size: 25px">add</mat-icon>-->
-                        <!--</button>-->
-                        <!--</div>-->
-                        <!--</div>-->
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <mat-form-field class="full-width">
+                                    <mat-select matInput placeholder="Seleccione la entidad a vincular" formControlName="asociado" [compareWith]="compararPersonas">
+                                        <mat-option *ngFor="let asociado of personas" [value]="asociado">
+                                            {{asociado|persona}}
+                                        </mat-option>
+                                    </mat-select>
+                                    <mat-error *ngIf="formPersona.controls['dirParticular'].errors?.required">Debe seleccionar un organismo a para vincular.</mat-error>
+                                </mat-form-field>
+                                <button *ngIf="formPersona.controls['tipoPersona'].value =='Natural'" mat-mini-fab color="primary" (click)="abrirVentana()" matTooltip="Nueva Persona Juridica">
+                                    <mat-icon style="font-size: 25px">add</mat-icon>
+                                </button>
+                            </div>
+                        </div>
                     </form>
                 </mat-tab>
                 <mat-tab label="Ayuda Familiar">
