--- a/entrega/src/app/layout/header/header.component.html
+++ b/entrega/src/app/layout/header/header.component.html
@@ -169,65 +169,6 @@
 
                     </div>
                 </li>
-                <li class="dropdown hidden-xs">
-                    <a data-toggle="dropdown" class="tm-task" href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="tmn-counts">2</i></a>
-                    <div class="dropdown-menu pull-right dropdown-menu-lg">
-                        <div class="listview">
-                            <div class="lv-header">
-                                Tasks
-                            </div>
-                            <div class="lv-body">
-                                <div class="lv-item">
-                                    <div class="lv-title m-b-5">HTML5 Validation Report</div>
-
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                                            <span class="sr-only">95% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lv-item">
-                                    <div class="lv-title m-b-5">Google Chrome Extension</div>
-
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                            <span class="sr-only">80% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lv-item">
-                                    <div class="lv-title m-b-5">Social Intranet Projects</div>
-
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                                            <span class="sr-only">20% Complete</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lv-item">
-                                    <div class="lv-title m-b-5">Bootstrap Admin Template</div>
-
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                            <span class="sr-only">60% Complete (warning)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="lv-item">
-                                    <div class="lv-title m-b-5">Youtube Client App</div>
-
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                            <span class="sr-only">80% Complete (danger)</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <a class="lv-footer" href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html">View All</a>
-                        </div>
-                    </div>
-                </li>
                 <li class="dropdown">
                     <a data-toggle="dropdown" class="tm-settings" href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"></a>
                     <ul class="dropdown-menu dm-icon pull-right">
@@ -238,27 +179,11 @@
                             <a data-action="clear-localstorage" href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-delete"></i> Clear Local Storage</a>
                         </li>
                         <li>
-                            <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-face"></i> Privacy Settings</a>
-                        </li>
-                        <li>
-                            <a href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"><i class="zmdi zmdi-settings"></i> Other Settings</a>
-                        </li>
-                        <li>
-                            <button (click)="logout()"><i class="zmdi zmdi-lasettings"></i> Serrar Seccion</button>
+                            <a routerLink="/logout"><i class="zmdi zmdi-power"></i> Cerrar Sesión</a>
                         </li>
                     </ul>
                 </li>
-                <li class="hidden-xs" id="chat-trigger" data-trigger="#chat">
-                    <a class="tm-chat" href="http://byrushan.com/projects/ma/1-5-1/jquery/widget-templates.html"></a>
-                </li>
-
             </ul>
-
-            <!-- Top Search Content -->
-            <div id="top-search-wrap">
-                <input type="text">
-                <i id="top-search-close">×</i>
-            </div>
         </li>
     </ul>
 </header>
