--- a/entrega/src/styles.css
+++ b/entrega/src/styles.css
@@ -22,6 +22,14 @@ table {
     width: 100%;
 }
 
+.middle-width {
+    width: 48%;
+}
+
+.middle-width:nth-child(2n+1) {
+    margin-right: 20px;
+}
+
 .spacer {
     flex: 1 1 auto;
 }
