Mejorando el sistema un poco mas.

--- a/entrega/src/app/admin/solicitud/solicitud-window/solicitud-window.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud-window/solicitud-window.component.html
@@ -41,7 +41,7 @@
                         <div class="fg-line form-group">
                             <p class="c-black f-500">Equipos, animales productivos o de trabajo por categoría, aperos de labranza, herramientas y otros bienes que posee para el trabajo de la tierra solicitada.</p>
                             <mat-form-field class="full-width">
-                                <textarea matInput placeholder="Describir" formControlName="detallesMT"></textarea>
+                                <textarea matInput placeholder="Descripción" formControlName="detallesMT"></textarea>
                                 <mat-error *ngIf="formSolicitud.controls['detallesMT'].errors?.required">Debe llenar el campo</mat-error>
                             </mat-form-field>
                         </div>
